<resources>
    <string name="app_name">Meeting app</string>
    <string name="action_settings">Поиск встречи</string>
    <string name="app_name_firebase">MeetingApp</string>
    <string name="prpject_url_console">https://console.firebase.google.com/project/meetingapp-2f339</string>
    <string name="projectUrl">https://meetingapp-2f339.firebaseio.com/</string>
    <string name="poject_id">meetingapp-2f339</string>
    <string name="api_key">AIzaSyA-dPijzTjmnofAloe4feCa4ZmPwz2UFdM</string>
    <string name="User_Auth">29vzPeL88taTjaKxu2ZNRBFAJT22</string>//уникальный идентификатор
    пользователя
    <!--main activity-->
    <string name="create_meating">Создать встречу</string>
    <string name="get_all_meat">Получить все встречи</string>
    <string name="cancel_meat">Отмнить встречу</string>
    <string name="Notification_title">Уведомление</string>
    <string name="New_Meet">Добавлена новая встреча!</string>
    <string name="ExportBtn">Expot data to csv</string>
    <!--list_item.xml-->
    <string name="meet_name">Название: </string>
    <string name="meet_desc">Описание: </string>
    <string name="from_date">Дата начала: </string>
    <string name="to_date">Дата окончания: </string>
    <string name="persons">Участнии: </string>
    <string name="join_me">Буду учавствовать </string>
    <string name="Priority_text">Приоритет </string>
    <!--список участников-->
    <string name="par_name">Имя: </string>
    <string name="par_desc">Должность</string>
    <string name="get_Method">GET</string>
    <string name="post_Method">POST</string>
    <!--Создать встречу-->
    <string-array name="Priority_array">
        <item>Normal</item>
        <item>Low</item>
        <item>High</item>
    </string-array>
    <string name="add_participant">Добавить участника</string>
    <!--hints-->
    <string name="meet_name_hint">Some meet</string>
    <string name="meet_desc_hint">Enter meeting description</string>
    <string name="DateHint">Enter date</string>
    <string name="select_priority">Выберите приоритет</string>
    <string name="date_hint">11.11.2012</string>
    <string name="add_name">Ivanov</string>
    <string name="add_pos">Developer</string>
    <string name="find_meeting">Задайте описание для поиска</string>
    <string name="find_btn">Искать</string>
    <string name="btn_cancel">Отменить</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="login">Enter login</string>
    <string name="password">Enter password</string>
    <string name="in">SignIn</string>
    <string name="inc_login">Incorrect login</string>
    <string name="inc_pass">Incorrect password</string>
    <string name="not_network">Сеть отсутствует. Повториите попытку подключения позже</string>
    <string name="try_again">Повторить попытку</string>
    <string name="email"></string>
</resources>
