<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.lab_2.MainActivity">

    <TextView
        android:id="@+id/meet_name"
        android:text="@string/meet_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/meet_name_val"
        android:text=""
        android:layout_toRightOf="@+id/meet_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/meet_desc"
        android:text="@string/meet_desc"
        android:layout_below="@+id/meet_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/from_date"
        android:text="@string/from_date"
        android:layout_below="@id/meet_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>