<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_meeting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lab_2.CreateMeeting">

    <TextView
        android:id="@+id/Name_Meet"
        android:text="@string/meet_name"
        android:layout_marginBottom="@dimen/item_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/Name_Edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/Desc_Edit"
        android:layout_above="@+id/Desc_Meet" />

    <TextView
        android:id="@+id/Desc_Meet"
        android:text="@string/meet_desc"
        android:layout_marginBottom="@dimen/item_margin"
        android:layout_below="@+id/Name_Meet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/Desc_Edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/FromDateEdit"
        android:layout_below="@+id/Name_Edit"
        android:layout_above="@+id/FromDateEdit" />


    <TextView
        android:id="@+id/Select_FomDate"
        android:layout_marginBottom="@dimen/item_margin"
        android:text="@string/from_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Desc_Meet" />

    <EditText
        android:id="@+id/FromDateEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/Desc_Meet"
        android:layout_toEndOf="@+id/SelectToDate"
        android:layout_above="@+id/SelectToDate" />

    <Spinner
     android:id="@+id/Priority"
     android:layout_below="@+id/ToDateEdit"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
    </Spinner>

    <TextView
        android:id="@+id/SelectToDate"
        android:text="@string/to_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ToDateEdit"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/ToDateEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Select_FomDate"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/SelectToDate" />

    <Button
        android:layout_below="@+id/Priority"
        android:onClick="onSendData"
        android:text="@string/create_meating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
